force-app/main/default/objects/RE_External_Market_Quotes__c/RE_External_Market_Quotes__c.object-meta.xml
<CustomObject>
    <label>RE External Market Quotes</label>
    <nameField>
        <displayFormat>RMQ-{0000000}</displayFormat>
        <label>RE External Market Quotes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE External Market Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>