force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>RE_Default_Currency__c</fullName>
    <label>Default Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>