force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Default_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Default_Per_Unit__c</fullName>
    <label>Default Per Unit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>