force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Gross_Net_Indicator__c.field-meta.xml
<CustomField>
    <fullName>RE_Gross_Net_Indicator__c</fullName>
    <label>Gross Net Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>