force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_No_Quote_Indicator__c.field-meta.xml
<CustomField>
    <fullName>RE_No_Quote_Indicator__c</fullName>
    <label>No Quote Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>