force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Date__c</fullName>
    <label>Quote Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>