force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Quote_No__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_No__c</fullName>
    <label>Quote No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>