force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Price__c</fullName>
    <label>Quote Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>