force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Quote_Source__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Source__c</fullName>
    <label>Quote Source</label>
    <length>2</length>
    <type>Text</type>
</CustomField>