force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Type__c</fullName>
    <label>Quote Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>