force-app/main/default/objects/RE_External_Market_Quotes__c/fields/RE_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>RE_Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <length>3</length>
    <type>Text</type>
</CustomField>