force-app/main/default/objects/RE_External_Market_Quotes__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RE_No_Quote_Indicator__c</columns>
    <columns>RE_Quote_Source__c</columns>
    <columns>RE_Quote_Type__c</columns>
    <columns>RE_Quote_No__c</columns>
    <columns>RE_Quote_Price__c</columns>
    <columns>RE_Quote_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Copy of All</label>
</ListView>